--- a/presentation.html
+++ b/presentation.html
@@ -75,7 +75,7 @@
                 <p>Tel : 01 23 45 67 89<br>
                     Mail : Contact@vertenature.com<br><br>
                     20 rue Winston  Chruchill<br>
-                    56000 Vannes - auray
+                    56000 Vannes
                 </p>
             </div>
             <div class="acces">
