J'ai enfin trouvé tout mes soucis enfin je crois...

--- a/login.html
+++ b/login.html
@@ -107,7 +107,6 @@
                         </div>
                         <div class="modal-body">
                 
-                
                                 <label for ='email'>Entrez votre Email</label><br>
                                 <input type ='text' name='email' id ='mail' required><br>
                                 <span id ='missMail'></span><br>
@@ -128,7 +127,7 @@
                 <h3>Nous Contacter</h3>
                 <p>Tel : 01 23 45 67 89<br>
                     Mail : Contact@vertenature.com<br><br>
-                    20 rue Winston  Chruchill<br>
+                    20 rue Winston Churchill<br>
                     56000 Vannes
                 </p>
             </div>
