--- a/plansite.html
+++ b/plansite.html
@@ -78,7 +78,7 @@
                 <h3>Nous Contacter</h3>
                 <p>Tel : 01 23 45 67 89<br>
                     Mail : Contact@vertnature.com<br><br>
-                    20 rue winston  Chruchill<br>
+                    20 rue winston Churchill<br>
                     56000 Vannes
                 </p>
             </div>
