--- a/boutique.html
+++ b/boutique.html
@@ -74,7 +74,7 @@
                 <h3>Nous Contacter</h3>
                 <p>Tel : 01 23 45 67 89<br>
                     Mail : Contact@vertenature.com<br><br>
-                    20 rue Winston  Chruchill<br>
+                    20 rue Winston Churchill<br>
                     56000 Vannes
                 </p>
             </div>
