soucis ok normalement ...

--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
                 <span id='missEmail'></span><br>
 
                 <label for="street">Votre adresse</label><br>
-                <input type="text" name="street" id="street" required>
+                <input type="text" name="street" id="street" required><br>
                 <span id='missAdress'></span><br>
                 <div id="search"></div>
 
@@ -151,15 +151,15 @@
         </div>
     </footer>
     <script src="scripts/gouv.js"></script>
-    <!-- <script src="scripts/creds.js"></script>
-    <script src="scripts/cirilla.js"></script> -->
-    <!-- <script src="scripts/login.js"></script>
+    <script src="scripts/creds.js"></script>
+    <script src="scripts/cirilla.js"></script> 
+    <script src="scripts/login.js"></script>
     <script src="scripts/modal.js"></script>
     <script src="scripts/regex.js"></script>
-    <script src="scripts/active.js"></script> -->
-    <!-- <script>
+    <script src="scripts/active.js"></script> 
+    <script>
         menuAct(4);
-    </script> -->
+    </script>
 </body>
 
 </html>
